[package]
name = "demo_tracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.37"
tracing-opentelemetry = "0.18.0"
tracing-subscriber = "0.3.17"
opentelemetry = { version = "*", features = ["rt-tokio-current-thread"] }
opentelemetry-jaeger = { version = "0.17.0", features = ["rt-tokio", "collector_client", "isahc_collector_client", "reqwest_collector_client"] }
tokio = { version = "1.26.0", features = ["full"] }
futures = "0.3.27"

